feat: add eslint&prettier
