# routes/meetups.js
@@ -1,5 +1,11 @@
 import express from 'express'
-import { getMeetups, createMeetup, getMeetupById, deleteMeetup, updateMeetup} from '../controllers/meetups.js'
+import {
+  getMeetups,
+  createMeetup,
+  getMeetupById,
+  deleteMeetup,
+  updateMeetup,
+} from '../controllers/meetups.js'
 import { meetupValidationMiddleware } from '../middleware/validationMiddleware.js'
 import { authMiddleware } from '../middleware/authMiddleware.js'
 import { meetupSchema, updateMeetupSchema } from '../validation/schemas.js'
@@ -8,13 +14,22 @@ const router = express.Router()
 
 router.get('/', getMeetups)
 
-router.post('/', authMiddleware, meetupValidationMiddleware(meetupSchema), createMeetup)
+router.post(
+  '/',
+  authMiddleware,
+  meetupValidationMiddleware(meetupSchema),
+  createMeetup
+)
 
 router.get('/:id', getMeetupById)
 
 router.delete('/:id', authMiddleware, deleteMeetup)
 
-router.patch('/:id', authMiddleware, meetupValidationMiddleware(updateMeetupSchema), updateMeetup)
-
+router.patch(
+  '/:id',
+  authMiddleware,
+  meetupValidationMiddleware(updateMeetupSchema),
+  updateMeetup
+)
 
 export default router
